<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:gravity="center"
    tools:context=".UI.Main.MainActivity">

    <FrameLayout
        android:padding="5dp"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:id="@+id/recipe_one"
        />


    <FrameLayout
        android:padding="5dp"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:id="@+id/recipe_two"/>


    <FrameLayout
        android:padding="5dp"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:id="@+id/recipe_tree"/>


    <FrameLayout
        android:padding="5dp"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:id="@+id/recipe_four"/>


</LinearLayout>

</ScrollView>