
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UI.Main.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/recipe_video"
        />


    <FrameLayout
        android:padding="5dp"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:id="@+id/recipe_step_instruction"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="150dp"
            android:text="previous step"
            android:layout_height="50dp"
            android:id="@+id/button_previous_container"/>

        <Button
            android:layout_width="150dp"
            android:text="next step"
            android:layout_height="50dp"
            android:id="@+id/button_next_container"/>
    </LinearLayout>
</LinearLayout>