<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
card_view:cardCornerRadius="10dp"
android:layout_width="match_parent"
android:layout_gravity="center_horizontal"
android:layout_height="wrap_content"
android:layout_margin="5dp"
    android:layout_marginHorizontal="3dp">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:id="@+id/step_instruction_view"/>
</android.support.v7.widget.CardView>